# atlas

./: .env  .env.template  .env.us_template  .gitignore  =0.15.0  =4.35.0  README-PRODUCTION.md  README.md  analyze_profits.sh  atlas_run.py  benchmark_run.py  build_and_run_ultimate_hft.sh  check_config.py  check_packages.py  check_requirements.sh  cleanup_report.txt  create_dashboard.sh  create_mac_service.sh  deploy_production_bot.sh  deploy_production_system.sh  fix_all_issues.sh  monitor_bot.sh  one.sh  quick_start.sh  real_world_integration.py  requirements-production.txt  requirements.txt  run_crypto_bot.sh  run_production_bot.sh  run_real_data_demo.sh  run_realtime_paper_trading.sh  run_secure_bot.sh  run_simple_live_demo.sh  run_trading_bot.sh  run_true_hft.sh  run_ultimate_bot.sh  run_ultimate_hft.sh  setup_autonomous_system.sh  setup_mac_native.sh  setup_production_system.sh  (+10 more)
api_clients/: crypto_client.py  financial_data_client.py  news_sentiment_client.py
autonomous_trader/: Cargo.toml  Dockerfile  autonomous-trader.service  deploy.sh  docker-compose.yml  monitor.sh  start_autonomous.sh
autonomous_trader/src/: main.rs
backup_20250713_235505/: atlas_run.py  benchmark_run.py  check_packages.py  environment.py  one.sh  quick_install.sh  real_world_integration.py  requirements_original.txt  run_alpha_detection_demo.sh  run_data_fusion_demo.sh  test_alpha_detection.py  test_fusion_integration.py  test_order_execution.py  test_portfolio_management.py  test_risk_management.py  test_run_binance_stream.py  test_run_twitter_stream.py  test_strategy_orchestration.py  two.sh
backup_20250713_235505/fusion/: data_fusion_engine.py
config/: api_credentials.env  atlas_config.yaml  environment.py  trading_config.yaml  us_exchanges.yaml  us_trading_config.yaml
config/production/: trading_config.yaml
core/fusion/: data_fusion_engine.py
cpp_core/: hft_core.cpp  hft_core.hpp
crypto_trading/: Cargo.toml
crypto_trading/cpp_accelerators/: market_microstructure.cpp  order_book_analyzer.cpp  risk_calculator.cpp  technical_indicators.cpp  trading_accelerators.h
crypto_trading/docker/: Dockerfile  docker-compose.yml
crypto_trading/ml_analysis/: market_analysis.py  risk_analysis.py  sentiment.py
crypto_trading/ml_engine/: deep_learning_accelerated.py
crypto_trading/src/: main.rs
crypto_trading/src/core/: config.rs  constants.rs  engine.rs  mod.rs  types.rs
crypto_trading/src/data/: mod.rs  price_feed.rs
crypto_trading/src/ml/: mod.rs
crypto_trading/src/risk/: mod.rs
crypto_trading/src/trading/: mod.rs  signals.rs  strategies.rs
data_streams/price_feed/: binance_real_feed.py  binance_ws_price_stream.py
data_streams/social_sentiment/: reddit_sentiment_feed.py  (+2 more)
execution/: order_execution_engine.py
infrastructure/: setup_infrastructure.sh
orchestration/: strategy_orchestration_engine.py
portfolio/: portfolio_management_engine.py
python_ml/: evolutionary_ml.py
risk_management/: risk_management_engine.py
rust_engine/: Cargo.toml  build.rs
scripts/: check_api_status.py  test_basic_apis.py
(+41 files in other folders)
