[package]
name = "crypto_trading"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dashmap = "5.5"
base64 = "0.22"
fastrand = "2.0"
native-tls = "0.2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = false
debug = false
