[package]
name = "crypto_trading"
version = "2.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
dashmap = "5.5"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
native-tls = "0.2"
hex = "0.4"
fastrand = "2.0"

uuid = { version = "1.0", features = ["v4", "serde"] }
rust_decimal = "1.35"
rust_decimal_macros = "1.35"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
